refactoring replacers again